fix warning about java.lang.Class.newInstance()
'The method newInstance() from the type Class<capture#3-of ?> is
deprecated since version 9'

tested by
org.eclipse.e4.ui.tests.css.core.parser.ValueTest